# cpp_boilerplace_with_gpu_based_library

./: CMakeLists.txt  main.cpp
cuda_library/: CMakeLists.txt  cuda_library.cu  cuda_matrix.cu
cuda_library/include/: cuda_library.h  cuda_matrix.h
